--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
-    <title>Vite + React</title>
+    <script
+      src="https://kit.fontawesome.com/35b83aded8.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>ArtDelish</title>
   </head>
   <body>
     <div id="root"></div>
